# the-shop

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
docs/: dolphin-preview.md  preview-rendering.md  slippi-compatibility.md  texture-index.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/mex/: LICENSE-mex-template.txt
src-tauri/src/: db.rs  error.rs  install.rs  iso.rs  iso_patch.rs  launch.rs  lib.rs  library.rs  main.rs  manifest.rs  mex.rs  paths.rs  patreon.rs  patreon_download.rs  preview.rs  reset.rs  skin_index.rs  slippi_config.rs  slot_codes.rs  texture_pack.rs  zip_helper.rs
src/components/: BusyOverlay.tsx  CharacterBadge.tsx  FirstRunModal.tsx  Logo.tsx  NoPreview.tsx  SafeImage.tsx  SearchBar.tsx  SkinPreview3D.tsx  Toaster.tsx  WindowControls.tsx  Wordmark.tsx
src/lib/: format.ts  ipc.ts  melee.ts  types.ts
src/routes/: Account.tsx  Browse.tsx  Connect.tsx  Library.tsx  Settings.tsx
texture-index/: index.json
tools/: build-index.py
tools/hsd-tool/: setup.sh
tools/hsd-tool/the-shop-hsd/: Program.cs  the-shop-hsd.csproj
