[package]
name = "the-shop"
version = "0.1.0"
description = "Slippi skin manager"
authors = ["Erick Martinez"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "the_shop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.3"
tauri-plugin-shell = "2.0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
gc_fst = "0.2"
xdelta3 = "0.1"
indexmap = "2"
dirs = "5.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
