[package]
name = "the-shop"
version = "0.4.0"
description = "Slippi skin manager"
authors = ["Erick Martinez"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "the_shop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.3"
tauri-plugin-shell = "2.0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
gc_fst = "0.2"
dirs = "5.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }
futures-util = "0.3"
url = "2"
rookie = "=0.5.6"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2"] }
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
